--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <title>Sass tutorial</title>
+    <title>E-learning</title>
 </head>
 <body>
 
@@ -28,8 +28,8 @@
         <a href="#contact">Contact</a>
       </div>
       <div class="btn-container">
-        <button class="btn btn-primary bg-white px-4 shadow" style="color: blue;">Login</button>
-        <button class="btn btn-primary px-3 ms-3 shadow">Sign up</button>
+        <a href="form.html" class="btn btn-primary bg-white px-4 shadow" style="color: blue;">Login</a>
+        <a href="form.html" class="btn btn-primary px-3 ms-3 shadow">Sign Up</a>
       </div>
       <i class="fa-solid fa-bars hamburger"></i>
     </div>
@@ -45,7 +45,7 @@
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum, provident? Officia consequatur ipsa odit itaque
         odio animi! Vitae, illo nulla.</p>
       <div class="btn-container">
-        <a href="#" class="btn btn-primary p-3">Enroll Now</a>
+        <a href="form.html" class="btn btn-primary p-3">Enroll Now</a>
         <i class="fa-solid fa-play bg-white mx-4"></i>Watch Video 
         <div class="d-flex align-items-center mt-2 aboutimg">
           <img class="enrolment" src="images/42.PNG" alt="">
