--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <a href="#contact">Contact</a>
       </div>
       <div class="btn-container">
-        <a href="form.html" class="btn btn-primary bg-white px-4 shadow" style="color: blue;">Login</a>
-        <a href="form.html" class="btn btn-primary px-3 ms-3 shadow">Sign Up</a>
+        <a href="./form.html" class="btn btn-primary bg-white px-4 shadow" style="color: blue;">Login</a>
+        <a href="./form.html" class="btn btn-primary px-3 ms-3 shadow">Sign Up</a>
       </div>
       <i class="fa-solid fa-bars hamburger"></i>
     </div>
@@ -45,7 +45,7 @@
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum, provident? Officia consequatur ipsa odit itaque
         odio animi! Vitae, illo nulla.</p>
       <div class="btn-container">
-        <a href="form.html" class="btn btn-primary p-3">Enroll Now</a>
+        <a href="./form.html" class="btn btn-primary p-3">Enroll Now</a>
         <i class="fa-solid fa-play bg-white mx-4"></i>Watch Video 
         <div class="d-flex align-items-center mt-2 aboutimg">
           <img class="enrolment" src="images/42.PNG" alt="">
