--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@
                 <div class="forms-wrap">
                     <form action="form.html" class="sign-in-form">
                         <div class="logo">
-                            <a href="index.html"><img src="images/logo.png" alt="logo image"></a> 
+                            <a href="index.html"><img src="form-images/logo.png" alt="logo image"></a> 
                          </div>
 
                         <div class="heading">
@@ -46,7 +46,7 @@
                     </form>
                     <form action="form.html" id="sign-up" class="sign-up-form">
                         <div class="logo">
-                           <a href="index.html"><img src="images/logo.png" alt="logo image"></a> 
+                           <a href="index.html"><img src="form-images/logo.png" alt="logo image"></a> 
                         </div>
 
                         <div class="heading">
