--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <div class="container home" id="home">
   <div class="row justify-content-center">
-    <div class="col col-md-5 col-12">
+    <div class="col col-lg-5 col-12">
       <h1>An investment in <span>knowledge</span> pays the best interest</h1>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum, provident? Officia consequatur ipsa odit itaque
         odio animi! Vitae, illo nulla.</p>
@@ -54,8 +54,8 @@
         
       </div>
     </div>
-    <div class="col col-md-7 col-12 homepage">
-      <img src="images/2.PNG" alt="">
+    <div class="col col-lg-7 col-12 homepage">
+      <img src="images/1.PNG" alt="">
     </div>
   </div>
 </div>
@@ -65,7 +65,7 @@
   <section class="container about" >
     <div class="row justify-content-center">
       <div class="col col-md-6 col-12 homepage2">
-        <img src="images/1.png" alt="">
+        <img src="images/2.png" alt="">
       </div>
   
       <div class="col col-md-6 mt-3 col-12">
